fix: code, refactoring